--- a/app/views/pages/criarbrecho.ejs
+++ b/app/views/pages/criarbrecho.ejs
@@ -34,7 +34,8 @@
             </section>
             <img src="imagens/maniquim.png" alt="Mannequin" class="mannequin">
             <section class="content">
-                <h1>Crie seu brechó</h1>
+                <span class="garimpe-text">Crie seu</span><br>
+                <span class="vintelo-text">Brechó</span>
                 <p>Transforme suas peças em oportunidades de negócio.</p>
                 <br>
                 <section class="buttons">
