--- a/app/public/css/avaliacaoadm.css
+++ b/app/public/css/avaliacaoadm.css
@@ -112,6 +112,14 @@
     transform: translateY(-1px);
 }
 
+.social-links img {
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
+}
+
+
+
 /*            ajustes responsividade mobile      */
 @media (max-width: 768px) {
     .review-item {
