--- a/app/public/css/criarbrecho.css
+++ b/app/public/css/criarbrecho.css
@@ -136,3 +136,21 @@
 .form-container > p {
     text-align: center;
 }
+
+.garimpe-text {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    letter-spacing: 2px;
+    color: #7d2838;
+    display: inline-block;
+}
+
+.vintelo-text {
+    font-family: 'Playfair Display', serif;
+    font-weight: 600;
+    font-size: 32px;
+    color: #7d2838;
+    line-height: 1.2;
+    display: inline-block;
+}
