--- a/app/views/pages/perfilbrecho.ejs
+++ b/app/views/pages/perfilbrecho.ejs
@@ -31,11 +31,11 @@
                 <ul>
                     <li><a href="/sacola1"><img src="/imagens/icone saco.png" class="img-tamanho" alt="Sacola"></a></li>
                     <% if (autenticado && autenticado.autenticado) { %>
-                        <li><a href="<%= autenticado.tipo === 'b' ? '/menuvendedor' : '/menu' %>"><img src="<%= autenticado.imagem ? '/' + autenticado.imagem : '/imagens/icone sem cadastro.png' %>" class="maria" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover;" alt="Perfil"></a></li>
+                        <li><a href="<%= autenticado.tipo === 'b' ? '/menuvendedor' : '/menu' %>"><img src="<%= autenticado.imagem ? '/' + autenticado.imagem : '/imagens/icone sem cadastro.png' %>" class="maria" style="width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" alt="Perfil"></a></li>
                     <% } else { %>
                         <li><a href="/cadastro"><img src="/imagens/icone sem cadastro.png" class="maria" alt="Perfil"></a></li>
                     <% } %>
-                    <li><a href="/favoritos"><img src="/imagens/icone coração.png" class="img-tamanho" alt="Favoritos"></a></li>
+                    <li><a href="/favoritos"><img src="/imagens/icone coraçao.png" class="img-tamanho" alt="Favoritos"></a></li>
                 </ul>
             </section>
         </header>
